# FEC_channel_decode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
DOC/: vit_decode_analyse.md
DOC/img/: project_pics.drawio
include/: FEC_channel_decode_api.h  FEC_channel_decode_test_imp.h  comm_tool.h  comm_type.h  joeytest.h
include/VIT/: FEC_VIT_imp.h
matlab/LDPC/: BPSK_NRLDPC_sim.m  LDPC_decoder.m  LDPC_decoder_normal.m  NR_5G_LDPC_encoder.m  NR_5g_ldpc_encode.m  check_cword.m  check_cword_normal.m  min_sum_test.m  mul_sh.m
matlab/vit/: bin_vec_2_dec.m  conv_encode.m  file_read_char.m  file_read_double.m  file_write_char.m  file_write_double.m  gen_next_out_table.m  general_conv_encode_step.m  qpsk_mod_demod_soft.m  vit_hard.m  vit_llr.m  vit_llr_SISO.m  vit_llr_decode_SISO.m  vit_llr_punc_test.m  viterbi_decoder.m  viterbi_decoder_llr.m
src/: FEC_channel_decode_api.cpp  FEC_channel_decode_test_imp.cpp  comm_tool.cpp
src/VIT/: FEC_VIT_imp.cpp
